--- a/llms/ui/app.css
+++ b/llms/ui/app.css
@@ -1103,6 +1103,9 @@
   .cursor-default {
     cursor: default;
   }
+  .cursor-help {
+    cursor: help;
+  }
   .cursor-not-allowed {
     cursor: not-allowed;
   }
